# ROS2_YOLO_TensorRT

./: .dockerignore  .gitignore  .~lock.latency_log.csv#  Dockerfile  FASTRTPS_PROFILES.xml  InstanceSegmentationInfo.msg  README.md  colconbuild_command  docker-compose.yaml  fastdds_config.xml  frame_times.txt  frame_times_publisher10hz.txt  frame_times_publisher2hz.txt  latency_log.csv  metrics_viewer.py  plots_creator.ipynb  setup_env.sh  system_metrics_log.csv  system_monitor.py  trtexec  trtexec_comands.txt
car_test_seg_1/: metadata.yaml
car_test_seg_2/: metadata.yaml
car_test_seg_3/: metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/image_directory_publisher/share/image_directory_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/image_directory_publisher/share/image_directory_publisher/config/: config.yaml  front_camera_info.yaml  left_camera_info.yaml  params.yaml  right_camera_info.yaml
install/image_directory_publisher/share/image_directory_publisher/include/image_directory_publisher/: directory_publisher_node.hpp
log/: latest_build
mediciones_car/: latency_log_car_1P_CCC_compressed.csv  latency_log_car_1P_CCC_compressed_2.csv  latency_log_car_1P_CCC_compressed_POST.csv  latency_log_car_1P_CCC_raw_POST.csv  latency_log_car_1P_FCC_local.csv  latency_log_car_1P_FFF_COMPRESSED_POST_not sure.csv  (+8 more)
src/ProyectCloud2image/: CMakeLists.txt  package.xml
src/ProyectCloud2image/include/chrono/: ChronoTimer.hpp
src/ProyectCloud2image/launch/: projection_node.launch.py
src/ProyectCloud2image/src/: projection_node.cpp
src/TensorRT-YOLO/: CMakeLists.txt  package.xml
src/TensorRT-YOLO/include/deploy/: model.cpp
src/TensorRT-YOLO/include/deploy/core/: core.cpp
src/TensorRT-YOLO/include/deploy/infer/: backend.cpp
src/TensorRT-YOLO/launch/: tensort_yolo_3P.launch.py
src/TensorRT-YOLO/src/: segment_node.cpp  segment_node_3P.cpp  segment_node_3P_composable.cpp
src/image_directory_publisher/: CMakeLists.txt  README.md
src/image_directory_publisher/launch/: directory_publisher.launch.py
src/image_directory_publisher/src/: directory_publisher_node.cpp
src/perception_obstacles_ros2/: .gitignore  CMakeLists.txt  package.xml
src/perception_obstacles_ros2/config/: config_DOG.yaml  config_cart_grid.yaml  config_offline_road_map.yaml
src/perception_obstacles_ros2/include/perception_obstacles/: perception_obstacles_node.hpp
src/perception_obstacles_ros2/include/perception_obstacles/ego_vehicle/: calculos_estado_coche.h
src/perception_obstacles_ros2/include/perception_obstacles/grid/: grid_inicializar_rejilla_cartesiana.h  grid_types.h  grid_utils.cuh  grid_utils.h  particle_types.h
src/perception_obstacles_ros2/include/perception_obstacles/grid/dynamic_occupancy_grid/: dynamic_occupancy_grid.h
src/perception_obstacles_ros2/include/perception_obstacles/grid/observed_occupancy_grid/: observed_occupancy_grid.h
src/perception_obstacles_ros2/include/perception_obstacles/grid/offline_road_map/: offline_road_map.cuh
src/perception_obstacles_ros2/include/perception_obstacles/pc_processing_obst_ground_classification/: pc_processing_obst_ground_classification.h  pc_processing_obst_ground_classification_utils.h
src/perception_obstacles_ros2/include/perception_obstacles/perception_utilities/: ChronoTimer.hpp  CloudsTypes.hpp  helper_cuda.h  pointcloud2.md  time_data.h  utils.h  utils_cuda.cuh
src/perception_obstacles_ros2/include/perception_obstacles/sensors_data/: helios_data.hpp  rubyplus_data.hpp
src/perception_obstacles_ros2/src/: perception_obstacles_callbacks.cpp  perception_obstacles_messages.cpp  perception_obstacles_node.cpp  perception_obstacles_transforms.cpp
src/perception_obstacles_ros2/src/ego_vehicle/: calculos_estado_coche.cu  calculos_estado_coche_debug.cpp
src/perception_obstacles_ros2/src/grid/: grid_inicializar_rejilla_cartesiana.cpp  grid_utils.cpp
src/perception_obstacles_ros2/src/grid/dynamic_occupancy_grid/: dynamic_occupancy_grid_core.cu  dynamic_occupancy_grid_debug.cu  dynamic_occupancy_grid_dynamic_state.cu  dynamic_occupancy_grid_new_particles.cu  dynamic_occupancy_grid_normalize_weights.cu  dynamic_occupancy_grid_prediction.cu  dynamic_occupancy_grid_random_numbers.cu  dynamic_occupancy_grid_resampling.cu  dynamic_occupancy_grid_sort.cu  dynamic_occupancy_grid_update.cu
src/perception_obstacles_ros2/src/grid/observed_occupancy_grid/: observed_occupancy_grid_core.cu  observed_occupancy_grid_debug.cu  observed_occupancy_grid_raster_occupied_cart_only.cu  observed_occupancy_grid_simple_polar_version.cu
src/perception_obstacles_ros2/src/grid/offline_road_map/: offline_road_map.cu
src/perception_obstacles_ros2/src/pc_processing_obst_ground_classification/: pc_processing_obst_ground_classification_channel_based.cu  pc_processing_obst_ground_classification_core.cu  pc_processing_obst_ground_classification_debug.cpp  pc_processing_obst_ground_classification_median_filter.cu  pc_processing_obst_ground_classification_median_filter_cart.cu
src/perception_obstacles_ros2/src/perception_utilities/: ChronoTimer.cpp  time_data.cpp  utils.cpp
src/perception_obstacles_ros2/src/sensors_data/: helios_data.cpp  rubyplus_data.cpp
src/pidnet_segmentation_cpp/: CMakeLists.txt  package.xml
src/pidnet_segmentation_cpp/include/pidnet_segmentation_cpp/: cuda_kernels.cu  tensorrt_inference.cpp  tensorrt_inference.h
src/pidnet_segmentation_cpp/launch/: pidnet_segmentation.launch.py
src/pidnet_segmentation_cpp/src/: pidnet_segmentation_node.cpp
src/seg_sub/: CMakeLists.txt
src/seg_sub/launch/: seg_sub.launch.py  seg_sub_yolo.launch.py
src/seg_sub/src/: seg_sub.cpp  seg_sub_pid.cpp  seg_sub_yolo.cpp
src/sensor_sync_pkg/: CMakeLists.txt  README.md
src/sensor_sync_pkg/src/: sync_node.cpp
src/yolocpp/: CMakeLists.txt
src/yolocpp/launch/: yolocpp_onnx.launch.py
src/yolocpp/models/: testonnx.py
src/yolocpp/models/install/: setup.bash  setup.zsh
src/yolocpp/models/log/: latest_build
src/yolocpp/src/: yolocpp.cpp
(+314 files in other folders)
