<?xml version="1.0"?>
<package format="3">
  <name>ProyectCloud2image</name>
  <version>0.0.1</version>
  <description>Subscriber node para medir la frecuencia de recepción de resultados de segmentación.</description>
  <maintainer email="tu_email@ejemplo.com">Tu Nombre</maintainer>
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>yolo_custom_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>opencv</depend>
  <depend>perception_pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>